# WSLiveEditor

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  message.txt  mod.json  test.json  xmake.lua
examples/js/: basic-ids.js  basic.js  package.json
libs/IXWebSocket/: xmake.lua
libs/IXWebSocket/lib/x86/: libixwebsocket.lib
libs/gd.h/layers_scenes_transitions_nodes/: EditorUI.h  LevelEditorLayer.h
src/: json.h  main.cpp  wsle.cpp  wsle.h
tests/: spwn.json
